--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igloo15/baseturngame",
-  "version": "0.3.0-dev.9",
+  "version": "0.1.0",
   "description": "A game of taking turns",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "build:lib:watch": "ng build lib --watch",
     "build:app": "ng build app",
     "build:app:prod": "ng build --prod",
-    "build:all": "npm run update:version && npm run build:lib && npm run build:prod",
+    "build:all": "npm run update:version && npm run build:lib && npm run build:app:prod",
     "deploy": "npm run build:all && npm run git:tag && npm publish --access=public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/igloo15/baseturngame#readme",
   "readme": "ERROR: No README data found!",
-  "_id": "baseturngame@0.3.0-dev.9",
+  "_id": "@igloo15/baseturngame@0.1.0",
   "dependencies": {
     "@angular/animations": "^9.0.7",
     "@angular/cdk": "^9.1.3",
@@ -69,5 +69,5 @@
     "typescript": "~3.7.5",
     "write-pkg": "^4.0.0"
   },
-  "date": "Sun Nov 24 2019"
+  "date": "Wed Mar 25 2020"
 }
