--- a/src/lib/tsconfig.app.json
+++ b/src/lib/tsconfig.app.json
@@ -11,6 +11,7 @@
     "**/*.spec.ts"
   ],
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true
+    "fullTemplateTypeCheck": true,
+    "enableIvy": false
   }
 }
