--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igloo15/basic-angular-lib",
-  "version": "0.2.0-dev.1",
+  "version": "0.3.0-dev.1",
   "description": "A game of taking turns",
   "main": "index.js",
   "scripts": {
@@ -39,42 +39,42 @@
   "readme": "ERROR: No README data found!",
   "_id": "@igloo15/basic-angular-lib@0.2.0-dev.1",
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^9.2.0",
-    "@angular/common": "~9.1.0",
-    "@angular/compiler": "~9.1.0",
-    "@angular/core": "~9.1.0",
-    "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "~9.1.0",
-    "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "~9.1.0",
-    "@angular/platform-browser-dynamic": "~9.1.0",
-    "@angular/router": "~9.1.0",
+    "@angular/animations": "^10.0.10",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "~10.0.10",
+    "@angular/compiler": "~10.0.10",
+    "@angular/core": "~10.0.10",
+    "@angular/flex-layout": "10.0.0-beta.32",
+    "@angular/forms": "~10.0.10",
+    "@angular/material": "^10.1.3",
+    "@angular/platform-browser": "~10.0.10",
+    "@angular/platform-browser-dynamic": "~10.0.10",
+    "@angular/router": "~10.0.10",
     "core-js": "^2.6.11",
-    "rxjs": "~6.5.4",
+    "rxjs": "~6.6.2",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.0",
-    "@angular-devkit/build-ng-packagr": "~0.901.0",
-    "@angular/cli": "~9.1.0",
-    "@angular/compiler-cli": "~9.1.0",
-    "@angular/language-service": "~9.1.0",
+    "@angular-devkit/build-angular": "^0.1000.6",
+    "@angular-devkit/build-ng-packagr": "~0.1000.6",
+    "@angular/cli": "~10.0.6",
+    "@angular/compiler-cli": "~10.0.10",
+    "@angular/language-service": "~10.0.10",
     "@types/node": "~12.12.31",
     "codelyzer": "~5.2.1",
     "cpx": "^1.5.0",
     "cross-var": "^1.1.0",
+    "edit-json-file": "^1.4.1",
     "git-describe": "^4.0.4",
-    "ng-packagr": "^9.1.0",
-    "read-pkg": "^5.2.0",
+    "glob": "^7.1.6",
+    "ng-packagr": "^10.0.4",
     "rimraf": "^3.0.2",
     "ts-node": "~8.8.1",
     "tsickle": "^0.38.1",
     "tslint": "^6.1.0",
-    "typedoc": "^0.17.3",
-    "typescript": "~3.7.5",
-    "write-pkg": "^4.0.0"
+    "typedoc": "^0.18.0",
+    "typescript": "~3.7.5"
   },
-  "date": "Thu Mar 26 2020"
+  "date": "Mon Aug 17 2020"
 }
